# wayverb-windows

./: README.md  fix_materials.py
wayverb/: cmake_build.sh  (+2 more)
wayverb/wayverb-0.0.1/wayverb-0.0.1/: .gitignore  CMakeLists.txt  WINDOWS_BUILD.md  readme.md
wayverb/wayverb-0.0.1/wayverb-0.0.1/build_win/src/core/: hrtf_entries.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/config/: dependencies.cmake
wayverb/wayverb-0.0.1/wayverb-0.0.1/demo/assets/test_models/: room1.dxf  room2.dxf  room3.dxf
wayverb/wayverb-0.0.1/wayverb-0.0.1/docs_source/_sass/base/: page.scss  typography.scss
wayverb/wayverb-0.0.1/wayverb-0.0.1/docs_source/_sass/components/: features.scss  list.scss  spotlights.scss  table.scss
wayverb/wayverb-0.0.1/wayverb-0.0.1/docs_source/_sass/layout/: footer.scss  header.scss  intro.scss  sidebar.scss  wrapper.scss
wayverb/wayverb-0.0.1/wayverb-0.0.1/docs_source/_sass/libs/: vars.scss
wayverb/wayverb-0.0.1/wayverb-0.0.1/docs_source/assets/css/: ie8.scss  ie9.scss  main.scss
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/include/combined/: engine.h  fdn.h  full_run.h  postprocess.h  waveguide_base.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/include/combined/model/: member.h  output.h  raytracer.h  source.h  waveguide.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/src/: engine.cpp  full_run.cpp  threaded_engine.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/src/model/: output.cpp  raytracer.cpp  source.cpp  waveguide.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/src/model/presets/: capsule.cpp  material.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/combined/tests/: threaded_engine.cpp  wayverb_engine_test.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/: CMakeLists.txt  hrtf_entries_stub.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/include/core/: az_el.h  maximum_length_sequence.h  program_wrapper.h  sinc.h  surfaces.h  unit_constructor.h  vector_look_up_table.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/include/core/cl/: representation.h  scene_structs.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/src/: az_el.cpp  program_wrapper.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/src/attenuator/: hrtf.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/src/cl/: geometry.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/core/tests/: dc_blocker_tests.cpp  gpu_geometry_tests.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/frequency_domain/include/frequency_domain/: buffer.h  convolver.h  multiband_filter.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/frequency_domain/src/: filter.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/frequency_domain/tests/: filter.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/hrtf/cmd/: main.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/include/raytracer/: canonical.h  diffraction.h  histogram.h  optimum_reflection_number.h  postprocess.h  raytracer.h  simulation_parameters.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/src/: canonical.cpp  diffraction.cpp  program.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/src/cl/: brdf.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/src/image_source/: deterministic.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/src/reflection_processor/: image_source.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/src/stochastic/: postprocessing.cpp  program.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/raytracer/tests/: attenuator.cpp  equal_energy.cpp  image_source.cpp  pressure.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/utilities/include/utilities/: apply.h  event.h  tuple_like.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/waveguide/: CMakeLists.txt
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/waveguide/include/waveguide/: canonical.h  dispersion_compensation.h  pcs.h  postprocess.h  stable.h  waveguide.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/waveguide/src/: boundary_coefficient_program.cpp  config.cpp  mesh.cpp  pcs.cpp  program.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/waveguide/src/cl/: utils.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/src/waveguide/tests/: pcs.cpp  waveguide_tests.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/: CMakeLists.txt  wayverb.jucer  wayverb.rc
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Builds/MacOSX/: Info-App.plist
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/JuceLibraryCode/modules/juce_core/: juce_core.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/JuceLibraryCode/modules/juce_opengl/: juce_opengl.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/: Application.cpp  Application.h  CommandIDs.h  MainContentComponent.cpp  MainContentComponent.h  main_model.cpp  main_model.h  main_window.cpp  main_window.h  self_test.cpp  self_test.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/3d_objects/: BasicDrawableObject.h  GlowSphereObject.cpp  GlowSphereObject.h  LitSceneShader.cpp  PointObject.cpp  PointObject.h  reflections_object.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/UtilityComponents/: AngularLookAndFeel.cpp  FileDropComponent.cpp  LoadWindow.cpp  Ruler.cpp  generic_renderer.h  modal_dialog.cpp  modal_dialog.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/: azimuth_elevation_property.cpp  azimuth_elevation_property.h  bottom_panel.cpp  bottom_panel.h  master.cpp  master.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/materials/: master.cpp  master.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/raytracer/: master.cpp  master.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/receivers/: master.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/sources/: master.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/left_bar/waveguide/: master.cpp
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/results/: results_window.cpp  results_window.h
wayverb/wayverb-0.0.1/wayverb-0.0.1/wayverb/Source/scene/: controller.cpp  controller.h  master.cpp  view.cpp  view.h
(+12 files in other folders)
